Closed Bug 612528 Opened 15 years ago Closed 15 years ago

<option><span><option> parsed wrong

Categories

(Core :: DOM: HTML Parser, defect, P2)

defect

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: hsivonen, Assigned: hsivonen)

Details

Attachments

(1 file)

Input: <option><span><option> - Expected: | <html> | <head> | <body> | <option> | <span> | <option> - Output: | <html> | <head> | <body> | <option> | <span> | <option> No idea if this is a long-time bug or if the spec changed recently.
Per discussion with jst, nominating all HTML5 parsing spec change bugs as blockers. The practical impact of this bug is unclear to me, but the bug makes Firefox fail a test case in the best known HTML5 parsing test suite.
blocking2.0: --- → ?
I think we should fix this, the more of these spec change bugs we fix, the smaller the number of differences between different implementations of the spec. Blocking.
blocking2.0: ? → betaN+
Comment on attachment 493347 [details] [diff] [review] Make <option> and <optgroup> imply </option> in the "in body" insertion mode only if the current node is "option" rs=me
Attachment #493347 - Flags: review?(jonas) → review+
Whiteboard: [waiting for all patches on bug 612529 to get r+]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Priority: -- → P2
Resolution: --- → FIXED
Whiteboard: [waiting for all patches on bug 612529 to get r+]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: