Bug 612528 - Make <option> and <optgroup> imply </option> in the "in body" insertion mode only if the current node is "option". rs=jonas, a=blocking2.0-betaN.